--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "@ng-bootstrap/ng-bootstrap": "^17.0.1",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.2",
+    "dayjs": "^1.11.19",
+    "keycloak-js": "^26.2.1",
+    "ngxtension": "^6.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
